--- a/prepros.cfg
+++ b/prepros.cfg
@@ -303,19 +303,6 @@
           "height": 0,
           "width": 0
         },
-        "ebbb6484": {
-          "id": "ebbb6484",
-          "path": "assets/img/camera.jpg",
-          "output": "assets/img/camera.jpg",
-          "name": "camera.jpg",
-          "category": "IMAGE",
-          "size": 63547,
-          "type": "jpg",
-          "initialSize": 63547,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
         "81fbb81e": {
           "id": "81fbb81e",
           "path": "assets/img/thumb-1.jpg",
@@ -442,6 +429,19 @@
           "size": 65885,
           "type": "jpg",
           "initialSize": 65885,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "aeb73728": {
+          "id": "aeb73728",
+          "path": "assets/img/camera.jpg.png",
+          "output": "assets/img/camera.jpg.png",
+          "name": "camera.jpg.png",
+          "category": "IMAGE",
+          "size": 629591,
+          "type": "png",
+          "initialSize": 629591,
           "optimized": false,
           "height": 0,
           "width": 0
