--- a/prepros.cfg
+++ b/prepros.cfg
@@ -445,6 +445,19 @@
           "optimized": false,
           "height": 0,
           "width": 0
+        },
+        "b3847a91": {
+          "id": "b3847a91",
+          "path": "assets/img/camera-2.jpg.png",
+          "output": "assets/img/camera-2.jpg.png",
+          "name": "camera-2.jpg.png",
+          "category": "IMAGE",
+          "size": 911591,
+          "type": "png",
+          "initialSize": 911591,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
